Fix dialog z-index.

--- a/less/graph.less
+++ b/less/graph.less
@@ -890,26 +890,10 @@ button:disabled {
 }
 
 ////////////
+// Dialogs
+////////////
 
-
-.forker {
-    z-index: @persist-z;
-
-    .modal-body {
-        word-wrap: break-word
-    }
-}
-
-.persistLayout {
-    z-index: @persist-z;
-
-    .modal-body {
-        word-wrap: break-word
-    }
-}
-
-
-.tagSet {
+.persistLayout, .persistWorkbook, .forker, .tagSet {
     z-index: @persist-z;
 
     .modal-body {
